Closed Bug 587064 Opened 15 years ago Closed 15 years ago

Crash [@ nsPresContext::Init] when Print Previewing YouTube video page

Categories

(Core :: Print Preview, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla2.0b4
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

Attached file Crash stack
Crash [@ nsPresContext::Init] when Print Previewing YouTube video page. STEPS TO REPRODUCE 1. load URL 2. File->Print Preview PLATFORMS AND BUILDS TESTED Bug occurs in local Firefox trunk debug build on Linux x86-64 Bug does NOT occur in local Firefox 1.9.2 debug build on Linux x86-64 ADDITIONAL INFORMATION The FrameManager assertions before the crash also occurs on 1.9.2, but no crash there.
With nightly Firefox Linux x86-64 builds: good: 20100812 Minefield/4.0b4pre bad: 20100813 Minefield/4.0b4pre http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cdfff833edf9&tochange=d5e211bdd793
blocking2.0: --- → ?
Boris, it looks like you added the last assertion before the crash in bug 577607, any chance the crash is related to those changes?
Definitely a chance :-). Can you debug it?
Attached patch wip1Splinter Review
Fwiw, getting the parent pres shell from the parent docshell instead of the parent document works.
2ce3d3fdd680 works, 3dd0ae211428 (bug 564652) works, 7d133a2a7d20 (bug 577607 part 2) works, 4e326cd7bac6 (bug 577607 part 3) crashes.
Blocks: 577607
Comment on attachment 465913 [details] [diff] [review] wip1 The regression is in newly added code (bug 577607 part 3), so we might as well do it like this. We can get feedback from Boris when he's back if necessary. I tried to write a test using the x-test plugin, but it doesn't crash unfortunately. TryServer is broken (bug 587256), so no test results yet.
Attachment #465913 - Flags: review?(roc)
Assignee: nobody → matspal
Comment on attachment 465913 [details] [diff] [review] wip1 It passed unit tests on TryServer, with known orange only AFAICT. I can land this today for beta4 if someone approves it.
Attachment #465913 - Flags: approval2.0?
Attachment #465913 - Flags: approval2.0?
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b4
Attachment #465913 - Flags: feedback?(bzbarsky)
Depends on: 593552
Attachment #465913 - Flags: feedback?(bzbarsky) → feedback-
Crash Signature: [@ nsPresContext::Init]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: