Get the parent pres shell from the docshell instead of the document.  b=587064 r=roc a=blocking2.0